--- a/assets/css/gamblehubspot.css
+++ b/assets/css/gamblehubspot.css
@@ -218,6 +218,10 @@ footer{
 	border-top: 1px solid #894098;
 }
 
+#email-invalid{
+	display: none;
+}
+
 
 @media (min-width: 992px){
 	.hero-form .register-form form .btn-container .btn-primary{
