--- a/assets/css/gamblehubspot.css
+++ b/assets/css/gamblehubspot.css
@@ -237,6 +237,10 @@ footer{
 	text-align: left;
 }
 
+#referral .ref-content img{
+	margin-bottom: 25px;
+}
+
 #referral .ref-content .text h2, .referral-content h2{
 	color:#ffc73a;
 	font-size: 25px;
