--- a/assets/css/add-to-cart.css
+++ b/assets/css/add-to-cart.css
@@ -179,12 +179,14 @@ Main Components
   right: -10px;
   height: 28px;
   width: 28px;
-  background: #ffffff;
-  color: #f34562;
+/*  background: #ffffff;
+  color: #f34562;*/
   font-size: 1.5rem;
   font-weight: 900;
   border-radius: 50%;
   text-indent: 0;
+  background: #ffc73a;
+  color: #403833;
   -webkit-transition: -webkit-transform .2s .5s;
   transition: -webkit-transform .2s .5s;
   transition: transform .2s .5s;
