--- a/assets/css/add-to-cart.css
+++ b/assets/css/add-to-cart.css
@@ -45,18 +45,20 @@ main {
 }*/
 
 .cd-add-to-cart {
-/*  display: inline-block;
-  padding: 1.2em 1.8em;
-  background: #2c97de;
-  border-radius: 50em;
-  text-transform: uppercase;
-  color: #ffffff;
-  font-weight: 700;
-  letter-spacing: .1em;*/
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: #894098;
+    border: none;
+    padding: 28px 12px;
+    box-shadow: inset 0 -6px 0px rgba(0,0,0,.15);
+    -webkit-box-shadow: inset 0 -6px 0px rgba(0,0,0,.15);
+    border: 10px solid #fff;
+    margin-bottom: 3px;
+    margin: 0;
+    margin-bottom: -30px;
   -webkit-transition: all .2s;
   transition: all .2s;
-  margin-bottom: 30px;
 }
 .cd-add-to-cart:hover {
   background: #42a2e1;
