--- a/assets/css/gamblehubspot.css
+++ b/assets/css/gamblehubspot.css
@@ -28,7 +28,7 @@ h3{
 
 .hero-form{
 	background: #fff;
-	margin-bottom: 135px;
+	margin-bottom: 70px;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -306,6 +306,7 @@ footer{
 	display: inline-block;
 	width: 100%;
     margin-bottom: 10px;
+    margin-top: 5px;
 }
 
 .lottery-numbers button{
