--- a/assets/css/add-to-cart.css
+++ b/assets/css/add-to-cart.css
@@ -44,7 +44,7 @@ main {
   }
 }*/
 
-.cd-add-to-cart {
+.cd-add-to-cart, .cd-add-to-cart2 {
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
@@ -60,10 +60,10 @@ main {
   -webkit-transition: all .2s;
   transition: all .2s;
 }
-.cd-add-to-cart:hover {
+.cd-add-to-cart:hover, .cd-add-to-cart2:hover {
   background: #42a2e1;
 }
-.cd-add-to-cart:active {
+.cd-add-to-cart:active, .cd-add-to-cart2:active {
   -webkit-transform: scale(0.9);
       -ms-transform: scale(0.9);
           transform: scale(0.9);
